--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "customers-manager-service",
+  "name": "cusmer-api",
   "version": "1.0.0",
   "scripts": {
     "dev": "bun run --watch src/index.ts",
